--- a/ven.html
+++ b/ven.html
@@ -64,6 +64,17 @@
           />
         </div>
       </section>
+      <section class="seaPic">
+        <div class="seaTitle">2022 4 / 23 兩個土包子看海<span>+</span></div>
+        <div class="seaPicAll">
+          <img src="./img/sea/1.jpg" alt="" />
+          <img src="./img/sea/2.jpg" alt="" />
+          <img src="./img/sea/3.jpg" alt="" />
+          <img src="./img/sea/4.jpg" alt="" />
+          <img src="./img/sea/5.jpg" alt="" />
+          <img src="./img/sea/6.jpg" alt="" />
+        </div>
+      </section>
     </section>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./ven2.js"></script>
