--- a/ven.html
+++ b/ven.html
@@ -65,14 +65,28 @@
         </div>
       </section>
       <section class="seaPic">
-        <div class="seaTitle">2022 4 / 23 兩個土包子看海<span>+</span></div>
-        <div class="seaPicAll">
-          <img src="./img/sea/1.jpg" alt="" />
-          <img src="./img/sea/2.jpg" alt="" />
-          <img src="./img/sea/3.jpg" alt="" />
-          <img src="./img/sea/4.jpg" alt="" />
-          <img src="./img/sea/5.jpg" alt="" />
-          <img src="./img/sea/6.jpg" alt="" />
+        <div class="seatotal">
+          <div class="seaTitle">2022 4 / 23 兩個土包子看海<span>+</span></div>
+          <div class="seaPicAll">
+            <img src="./img/sea/1.jpg" alt="" />
+            <img src="./img/sea/2.jpg" alt="" />
+            <img src="./img/sea/3.jpg" alt="" />
+            <img src="./img/sea/4.jpg" alt="" />
+            <img src="./img/sea/5.jpg" alt="" />
+            <img src="./img/sea/6.jpg" alt="" />
+            <img src="./img/sea/7.jpg" alt="" />
+          </div>
+        </div>
+        <div class="ramenTotal">
+          <div class="ramenTitle">
+            2022 5 / 3 帶鄉下芭樂吃拉麵<span>+</span>
+          </div>
+          <div class="ramenPicAll">
+            <img src="./img/ramen/1.jpg" alt="" />
+            <img src="./img/ramen/2.jpg" alt="" />
+            <img src="./img/ramen/3.jpg" alt="" />
+            <img src="./img/ramen/4.jpg" alt="" />
+          </div>
         </div>
       </section>
     </section>
