--- a/ven.html
+++ b/ven.html
@@ -119,6 +119,25 @@
             <img src="./img/coffee/4.jpg" alt="" />
           </div>
         </div>
+        <div class="dayOneTotal">
+          <div class="dayOneTotalBox">
+            <img src="./img/d1/1.jpg" alt="" />
+            <img src="./img/d1/2.jpg" alt="" />
+            <img src="./img/d1/3.jpg" alt="" />
+            <img src="./img/d1/4.jpg" alt="" />
+            <img src="./img/d1/5.jpg" alt="" />
+            <img src="./img/d1/6.jpg" alt="" />
+            <img src="./img/d1/7.jpg" alt="" />
+            <img src="./img/d1/8.jpg" alt="" />
+            <img src="./img/d1/9.jpg" alt="" />
+            <img src="./img/d1/10.jpg" alt="" />
+            <img src="./img/d1/11.jpg" alt="" />
+            <img src="./img/d1/12.jpg" alt="" />
+            <img src="./img/d1/13.jpg" alt="" />
+            <img src="./img/d1/14.jpg" alt="" />
+            <img src="./img/d1/15.jpg" alt="" />
+          </div>
+        </div>
       </section>
     </section>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
